[package]
name = "whatsapp-api-go"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
websocket = "0.26"
protobuf = "3.3"
bytes = "1.5"
rand = "0.8"
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
aes = "0.8"
crypto = "0.5"
log = "0.4"
env_logger = "0.11"
url = "2.5"
hex = "0.4"

[lib]
name = "whatsandra"
path = "src/lib.rs"

[[bin]]
name = "whatsapp-api"
path = "src/main.rs"
